Transfer examples to rdd and sql packages